# gurobi-logtools

./: .gitignore  Makefile  README.md  gurobi-logtools.ipynb  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-ci.yml  python-tox.yml
src/grblogtools/: __init__.py
src/gurobi_logtools/parsers/: continuation.py  nodelog.py  norel.py  pretree_solutions.py  single_log.py
tests/: test_api.py
tests/parsers/: test_continuous.py  test_nodelog.py  test_norel.py  test_presolve.py  test_pretreesols.py
